--- a/page404.html
+++ b/page404.html
@@ -14,7 +14,9 @@
     </header>
 
     <main>
-        <img src="https://img.freepik.com/premium-vector/beach-error-404-concept-illustration_488994-54.jpg?w=2000" alt="">
+        <div class="container">
+            <img src="https://img.freepik.com/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_114360-5529.jpg?w=2000" class="img-fluid" alt="">
+          </div>
     </main>
 </body>
 </html>
